<!-- Copyright 2012 Arseniy Isakov Licensed under the Apache License, Version 
	2.0 (the "License"); you may not use this file except in compliance with 
	the License. You may obtain a copy of the License at http://www.apache.org/licenses/LICENSE-2.0 
	Unless required by applicable law or agreed to in writing, software distributed 
	under the License is distributed on an "AS IS" BASIS, WITHOUT WARRANTIES 
	OR CONDITIONS OF ANY KIND, either express or implied. See the License for 
	the specific language governing permissions and limitations under the License. -->
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
	<modelVersion>4.0.0</modelVersion>

	<groupId>org.elsoft.platform.metamodel.admin</groupId>
	<artifactId>populate-admin</artifactId>
	<version>1.0</version>
	<packaging>jar</packaging>


	<properties>
		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
		<xjc.schema.pojo.dir>generated-src</xjc.schema.pojo.dir>
	</properties>



	<name>ELsoft :: Platform :: Metamodel :: Populate admin</name>


	<dependencies>
		<dependency>
			<groupId>org.elsoft.platform</groupId>
			<artifactId>dataviewcontrol</artifactId>
			<version>1.0</version>
		</dependency>

		<dependency>
			<groupId>org.elsoft.platform.implementation.primefaces-ws</groupId>
			<artifactId>jsf-artifact-calculator</artifactId>
			<version>1.0</version>

		</dependency>

		<dependency>
			<groupId>org.elsoft.platform.implementation.primefaces-ws</groupId>
			<artifactId>ws-ejb-artifact-calculator</artifactId>
			<version>1.0</version>
		</dependency>

		<dependency>
			<groupId>org.elsoft.platform.metamodel</groupId>
			<artifactId>metamodel-api</artifactId>
			<version>1.0</version>
		</dependency>

		<dependency>
			<groupId>org.elsoft.platform.implementation.primefaces-ws</groupId>
			<artifactId>transformator</artifactId>
			<version>1.0</version>
		</dependency>


		<dependency>
			<groupId>cglib</groupId>
			<artifactId>cglib</artifactId>
			<version>2.2.2</version>
		</dependency>

		<dependency>
			<groupId>uk.com.robust-it</groupId>
			<artifactId>cloning</artifactId>
			<version>1.7.9</version>
		</dependency>

		<dependency>
			<groupId>commons-collections</groupId>
			<artifactId>commons-collections</artifactId>
			<version>3.2.1</version>
		</dependency>

		<dependency>
			<groupId>javax.jcr</groupId>
			<artifactId>jcr</artifactId>
			<version>2.0</version>
		</dependency>
		<dependency>
			<groupId>org.apache.jackrabbit</groupId>
			<artifactId>jackrabbit-jcr-rmi</artifactId>
			<version>2.2.8</version>
		</dependency>
		<dependency>
			<groupId>org.slf4j</groupId>
			<artifactId>slf4j-api</artifactId>
			<version>1.5.11</version>
		</dependency>
		<dependency>
			<groupId>org.slf4j</groupId>
			<artifactId>slf4j-simple</artifactId>
			<version>1.5.11</version>
		</dependency>

		<dependency>
			<groupId>org.apache.jackrabbit</groupId>
			<artifactId>jackrabbit-jcr-commons</artifactId>
			<version>2.2.8</version>
		</dependency>

		<dependency>
			<groupId>commons-logging</groupId>
			<artifactId>commons-logging</artifactId>
			<version>1.0.3</version>
		</dependency>

		<dependency>
			<groupId>org.elsoft.platform</groupId>
			<artifactId>commons-platform</artifactId>
			<version>1.0</version>

		</dependency>

		<dependency>
			<groupId>commons-beanutils</groupId>
			<artifactId>commons-beanutils</artifactId>
			<version>1.6</version>
		</dependency>

		<dependency>
			<groupId>org.elsoft.platform.ui-integration</groupId>
			<artifactId>form-loader</artifactId>
			<version>1.0</version>
		</dependency>

		<dependency>
			<groupId>postgresql</groupId>
			<artifactId>postgresql</artifactId>
			<version>9.1-901.jdbc4</version>
		</dependency>



	</dependencies>

	<build>
		<plugins>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-compiler-plugin</artifactId>
				<version>2.0.2</version>
				<configuration>
					<source>1.6</source>
					<target>1.6</target>
				</configuration>
			</plugin>
		</plugins>
	</build>

	<profiles>
		<profile>
			<id>populate</id>
			<build>
				<plugins>
					<plugin>
						<groupId>org.codehaus.mojo</groupId>
						<artifactId>exec-maven-plugin</artifactId>
						<version>1.2.1</version>
						<executions>
							<execution>
								<goals>
									<goal>exec</goal>
								</goals>
							</execution>
						</executions>
						<configuration>
							<executable>/usr/lib/jdk1.6.0_31/bin/java</executable>
							<includeProjectDependencies>true</includeProjectDependencies>
							<arguments>
								<argument>-XX:PermSize=512M</argument>
								<argument>-classpath</argument>
								<classpath />
								<argument>org.elsoft.platform.form.PopulateApplication</argument>
							</arguments>
						</configuration>
					</plugin>
				</plugins>
			</build>
		</profile>
		<profile>
			<id>generate</id>
			<build>
				<plugins>
					<plugin>
						<groupId>org.codehaus.mojo</groupId>
						<artifactId>exec-maven-plugin</artifactId>
						<version>1.2.1</version>
						<executions>
							<execution>
								<goals>
									<goal>exec</goal>
								</goals>
							</execution>
						</executions>
						<configuration>
							<executable>/usr/lib/jdk1.6.0_31/bin/java</executable>
							<includeProjectDependencies>true</includeProjectDependencies>
							<arguments>
								<argument>-XX:PermSize=512M</argument>
								<argument>-classpath</argument>
								<classpath />
								<argument>org.elsoft.platform.form.GenerateApp</argument>
							</arguments>
						</configuration>
					</plugin>
				</plugins>
			</build>
		</profile>
	</profiles>

</project>
